eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/Red_Vezba2.build.log
00:36:56 **** Rebuild of configuration Debug for project Red_Vezba2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
..\main.cpp: In member function 'int red::otstrani()':
..\main.cpp:34:4: error: return-statement with no value, in function returning 'int' [-fpermissive]
    return;
    ^~~~~~

00:36:57 Build Failed. 1 errors, 0 warnings. (took 1s.606ms)

